--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: db/test.sqlite3
 
@@ -20,3 +20,6 @@ production:
   pool: 5
   timeout: 5000
   database: workshift_scheduler_production
+
+cucumber:
+  <<: *test
