--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ config/secrets.yml
 /vendor/assets/bower_components
 *.bowerrc
 bower.json
+
+# ignore editor generated temp files
+*~
+.*.swp
+.DS_Store
