--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,21 @@
 # SQLite version 3.x
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
+  username: workshift_admin
+  password: bscworkshiftadmin
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: workshift_scheduler_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
   <<: *default
-  database: db/test.sqlite3
+  database: workshift_scheduler_test
 
 production:
   adapter: postgresql
