Setting up Travis to use Postgres as test database.
Followed instructions on
http://docs.travis-ci.com/user/using-postgresql/

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ rvm:
 
 bundler_args: --without production
 
-script:
+before_script:
+  - cp config/database.yml.travis config/database.yml
+  - psql -c 'create database travis_ci_test;' -U postgres
 
+script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
   - bundle exec rspec spec
