--- a/public/favicons/manifest.json
+++ b/public/favicons/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "BSC Workshift Scheduler",
+	"name": "Workshift Scheduler",
 	"icons": [
 		{
 			"src": "\/favicons\/android-chrome-36x36.png",
