--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: ruby
 rvm:
   - 2.2.2
+
+addons:
+  code_climate:
+    repo_token: d7869e7fcc0219af3feef17938aaa19ff9a48694593f57b582bf76fedae32a8f
