--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,3 +3,4 @@ languages:
 exclude_paths:
 - "coverage/assets/0.10.0/application.js"
 - "features/step_definitions/web_steps.rb"
+- "config/initializers/form.rb"
