--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,3 +4,4 @@ exclude_paths:
 - "coverage/assets/0.10.0/application.js"
 - "features/step_definitions/web_steps.rb"
 - "config/initializers/form.rb"
+- "app/assets/javascripts/griddle.js"
