--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+/coverage/*
+
+/spring-1000/*
+
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
