--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ addons:
     repo_token: d7869e7fcc0219af3feef17938aaa19ff9a48694593f57b582bf76fedae32a8f bundle exec rake
 
 after_success:
-- CI=true TRAVIS=true coveralls --verbose
+- coveralls
