--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "description": "coop-workshift-app",
   "version": "1.0.0",
   "devDependencies": {
-    "webpack": "~1.4.13",
+    "coffee-loader": "^0.7.2",
+    "coffee-script": "^1.10.0",
+    "exports-loader": "~0.6.2",
     "expose-loader": "~0.6.0",
     "imports-loader": "~0.6.3",
-    "exports-loader": "~0.6.2",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "webpack": "~1.4.13",
+    "chunk-manifest-webpack-plugin": "~0.0.1"
   },
   "dependencies": {}
 }
