--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,7 +6,7 @@ exclude_paths:
 - "config/initializers/form.rb"
 - "config/webpack/app/assets/javascripts/common-bundle.js"
 - "app/assets/javascripts/griddle.js"
-- "bower_components/**.js"
+- "bower_components/"
 - "app/frontend/old_javascripts_folder/griddle.js"
 - "public/assets/main-bundle-c922606d11cfa251d8c9.js"
 - "public/assets/bundle.js"
