--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "griddle-react": "^0.4.1",
-    "react": "^0.14.8"
+    "moment": "^2.12.0",
+    "react": "^0.14.8",
+    "react-bootstrap": "^0.28.5"
   }
 }
